invalid_sym_arg_keywords_test/invalid_sym_arg_keywords_test_9.src
.IPPcode24
EXIT string@ahoj bool@true